front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: my-app-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: react-frontend-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: my-app-v2
spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
    selector:
        app: frontend
